# cumulus-post-map-payload-grouping

./: README.md  README.rst  pyproject.toml
.github/workflows/: build-pipeline.yml
cumulus_post_map_payload_grouping/: cumulus_post_map_payload_grouping.py
tests/: test_basic_functions.py
