[tool.poetry]
name = "cumulus-post-map-payload-grouping"
version = "1.0.0"
description = "A simple lambda where it gets distributed map status"
authors = ["Hong-Kit Randy Yeung <hong-kit.r.yeung@jpl.nasa.gov>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
moto = "^4.1.14"
pytest-cov = "^4.0.0"
pylint = "^2.17.4"
flake8 = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
